# ntf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  extra-ntf.mk  hello_jwe.c  ntfctl
api/: CMakeLists.txt  ntf_api.cc  ntf_context.cc  ntf_context.hpp  ntf_decrypt.cc
bessctl/: ntf.bess  pcap-source.bess
bessctl/conf/: aws-gwlb.bess  config.py  encap.bess  geneve-proxy.bess  ntf.bess  pcap-source.bess
bessctl/conf/examples/: tnsa-gateway-access.yaml
bessctl/conf/schema/: config-base.yaml  ntf_type_sme.yaml  token_insert_ipv6_ext_header.yaml
config/: config.py  test_config.py
config/defaults/: tnsa.yaml
config/examples/: nsa.yaml  sme.yaml  tnsa-gateway-access.yaml  tnsa.yaml
config/schema/: ntf_type_nsa.yaml  token_insert_geneve.yaml
include/: ntf_api.h
modules/: allowlist.cc  allowlist.h  geneve_decap.cc  geneve_decap.h  geneve_return.cc  geneve_return.h  healthcheck_responder.cc  healthcheck_responder.h  ntf.cc  ntf.h  pcap_source.cc  pcap_source.h  reverse_address.cc  reverse_address.h  token_decryptor.cc  token_decryptor.h  token_decryptor_cose.cc  token_detector.cc  token_detector.h  token_validator.cc  token_validator.h
protobuf/: allowlist_msg.proto  hcresponder_msg.proto  ntf.proto  ntf_msg.proto  pcap_source.proto  pcap_source_msg.proto  revaddr_msg.proto  token_decryptor_msg.proto  token_detector_msg.proto  token_validator_msg.proto
scripts/: install-cose
tests/: .gitignore  CMakeLists.txt  ntf_tests  test_main.cc  test_nte.cc  test_ntf_api.cc  test_ntf_context.cc  test_ntf_decrypt.cc  test_packets.h
utils/: CMakeLists.txt  allocator_context.cc  allocator_context.h  decrypt.h  flow.h  geneve.h  nte.cc  nte.h  ntf_api.cc  ntf_api.h  ntf_context.cc  ntf_context.hpp  ntf_decrypt.cc  ntf_decrypt.h  stun.h  token_decryptor_cose.cc
